fix: z-index & a in nav

--- a/navbar/index.css
+++ b/navbar/index.css
@@ -6,6 +6,7 @@ nav{
     transform: translateX(-50%);
     padding: 30px;
     padding-top: 0px;
+    z-index: 1000;
     /* background-color: rgb(203, 203, 203); */
 }
 nav:hover{
@@ -40,15 +41,17 @@ nav ul{
     align-items: flex-start;
     gap: 8px;
 }
-nav li{
+nav li a{
     padding: 4px 10px;
     background-color: transparent;
     width: 100%;
     border-radius: 4px;
     color: white;
     font-weight: 400;
+
+    text-decoration: none;
 }
-nav li:hover, nav li.active{
+nav li a:hover, nav a.active{
     background-color: rgba(255, 255, 255, 0.16);
 }
 
